data/issues_nolabel/nolabel_test_8031.txt
Can't Build XLA compiler for Tensorflow

I am trying to compiler tensorflow using bazel following the steps in https://www.tensorflow.org/install/install_sources#ConfigureInstallation.
My system is Ubuntu 16.04
gcc -v 5.4
I want to use XLA compiler so set it in the ./configuration file.
I am using CPU only for now.
I tried with pip and pip3
I get the following Error:
ERROR: /home/achang/tensorflow/tensorflow/compiler/tf2xla/BUILD:23:1: C++ compilation of rule '//tensorflow/compiler/tf2xla:xla_compiler' failed: gcc failed: error executing command 
  (cd /home/achang/.cache/bazel/_bazel_root/6c98a6c54aeed71fa731445a9f51836b/execroot/tensorflow && \
  exec env - \
  /usr/bin/gcc -U_FORTIFY_SOURCE -fstack-protector -Wall -B/usr/bin -B/usr/bin -Wunused-but-set-parameter -Wno-free-nonheap-object -fno-omit-frame-pointer -g0 -O2 '-D_FORTIFY_SOURCE=1' -DNDEBUG -ffunction-sections -fdata-sections '-march=native' '-std=c++0x' '-march=native' -MD -MF bazel-out/local-opt/bin/tensorflow/compiler/tf2xla/_objs/xla_compiler/tensorflow/compiler/tf2xla/xla_compiler.pic.d '-frandom-seed=bazel-out/local-opt/bin/tensorflow/compiler/tf2xla/_objs/xla_compiler/tensorflow/compiler/tf2xla/xla_compiler.pic.o' -fPIC -DEIGEN_MPL2_ONLY -DTENSORFLOW_USE_JEMALLOC -DLLVM_ENABLE_STATS -D__STDC_LIMIT_MACROS -D__STDC_CONSTANT_MACROS -D_DEBUG -DLLVM_BUILD_GLOBAL_ISEL -iquote . -iquote bazel-out/local-opt/genfiles -iquote external/jemalloc -iquote bazel-out/local-opt/genfiles/external/jemalloc -iquote external/bazel_tools -iquote bazel-out/local-opt/genfiles/external/bazel_tools -iquote external/protobuf -iquote bazel-out/local-opt/genfiles/external/protobuf -iquote external/eigen_archive -iquote bazel-out/local-opt/genfiles/external/eigen_archive -iquote external/local_config_sycl -iquote bazel-out/local-opt/genfiles/external/local_config_sycl -iquote external/gif_archive -iquote bazel-out/local-opt/genfiles/external/gif_archive -iquote external/jpeg -iquote bazel-out/local-opt/genfiles/external/jpeg -iquote external/com_googlesource_code_re2 -iquote bazel-out/local-opt/genfiles/external/com_googlesource_code_re2 -iquote external/farmhash_archive -iquote bazel-out/local-opt/genfiles/external/farmhash_archive -iquote external/highwayhash -iquote bazel-out/local-opt/genfiles/external/highwayhash -iquote external/png_archive -iquote bazel-out/local-opt/genfiles/external/png_archive -iquote external/zlib_archive -iquote bazel-out/local-opt/genfiles/external/zlib_archive -iquote external/local_config_cuda -iquote bazel-out/local-opt/genfiles/external/local_config_cuda -iquote external/llvm -iquote bazel-out/local-opt/genfiles/external/llvm -isystem external/jemalloc/include -isystem bazel-out/local-opt/genfiles/external/jemalloc/include -isystem external/bazel_tools/tools/cpp/gcc3 -isystem external/protobuf/src -isystem bazel-out/local-opt/genfiles/external/protobuf/src -isystem external/eigen_archive -isystem bazel-out/local-opt/genfiles/external/eigen_archive -isystem external/gif_archive/lib -isystem bazel-out/local-opt/genfiles/external/gif_archive/lib -isystem external/farmhash_archive/src -isystem bazel-out/local-opt/genfiles/external/farmhash_archive/src -isystem external/png_archive -isystem bazel-out/local-opt/genfiles/external/png_archive -isystem external/zlib_archive -isystem bazel-out/local-opt/genfiles/external/zlib_archive -isystem external/local_config_cuda/cuda -isystem bazel-out/local-opt/genfiles/external/local_config_cuda/cuda -isystem external/local_config_cuda/cuda/include -isystem bazel-out/local-opt/genfiles/external/local_config_cuda/cuda/include -isystem external/llvm/include -isystem bazel-out/local-opt/genfiles/external/llvm/include -isystem external/llvm/lib/IR -isystem bazel-out/local-opt/genfiles/external/llvm/lib/IR -isystem external/llvm/include/llvm/IR -isystem bazel-out/local-opt/genfiles/external/llvm/include/llvm/IR -isystem external/llvm/lib/Target/PowerPC -isystem bazel-out/local-opt/genfiles/external/llvm/lib/Target/PowerPC -isystem external/llvm/lib/Target/X86 -isystem bazel-out/local-opt/genfiles/external/llvm/lib/Target/X86 -isystem external/llvm/lib/Target/AArch64 -isystem bazel-out/local-opt/genfiles/external/llvm/lib/Target/AArch64 -isystem external/llvm/lib/Target/ARM -isystem bazel-out/local-opt/genfiles/external/llvm/lib/Target/ARM -fno-canonical-system-headers -Wno-builtin-macro-redefined '-D__DATE__="redacted"' '-D__TIMESTAMP__="redacted"' '-D__TIME__="redacted"' -c tensorflow/compiler/tf2xla/xla_compiler.cc -o bazel-out/local-opt/bin/tensorflow/compiler/tf2xla/_objs/xla_compiler/tensorflow/compiler/tf2xla/xla_compiler.pic.o): com.google.devtools.build.lib.shell.BadExitStatusException: Process exited with status 1.
tensorflow/compiler/tf2xla/xla_compiler.cc: In function 'tensorflow::Status tensorflow::{anonymous}::CheckSignature(const DataTypeVector&, const std::vector<tensorflow::XlaCompiler::Argument>&)':
tensorflow/compiler/tf2xla/xla_compiler.cc:48:21: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
   for (int i = 0; i < types.size(); ++i) {
                     ^
tensorflow/compiler/tf2xla/xla_compiler.cc: In member function 'tensorflow::Status tensorflow::XlaCompiler::BuildExecutable(const tensorflow::XlaCompiler::CompilationResult&, std::unique_ptr<xla::LocalExecutable>*)':
tensorflow/compiler/tf2xla/xla_compiler.cc:139:21: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
   for (int i = 0; i < result.xla_input_shapes.size(); ++i) {
                     ^
tensorflow/compiler/tf2xla/xla_compiler.cc: In function 'tensorflow::Status tensorflow::{anonymous}::BuildArguments(const std::vector<tensorflow::XlaCompiler::Argument>&, bool, xla::ComputationBuilder*, std::vector<tensorflow::XlaContext::Argument>*, std::vector<int>*, std::vector<xla::Shape, std::allocator<xla::Shape> >*)':
tensorflow/compiler/tf2xla/xla_compiler.cc:228:8: error: 'size_typ' is not a member of 'std::vector<tensorflow::XlaCompiler::Argument>'
   for (std::vector<XlaCompiler::Argument>::size_typ i = 0;
        ^
tensorflow/compiler/tf2xla/xla_compiler.cc:229:8: error: 'i' was not declared in this scope
        i < args.size(); ++i) {
        ^
tensorflow/compiler/tf2xla/xla_compiler.cc: In member function 'tensorflow::Status tensorflow::XlaCompiler::CompileGraph(const string&, std::unique_ptr<tensorflow::Graph>, tensorflow::FunctionLibraryRuntime*, const std::vector<tensorflow::XlaCompiler::Argument>&, tensorflow::XlaCompiler::CompilationResult*)':
tensorflow/compiler/tf2xla/xla_compiler.cc:480:20: error: 'VariableWrite' is not a member of 'tensorflow::XlaCompiler'
   for (std::vector<XlaCompiler::VariableWrite>::size_type  i = 0;
                    ^
tensorflow/compiler/tf2xla/xla_compiler.cc:480:20: error: 'VariableWrite' is not a member of 'tensorflow::XlaCompiler'
tensorflow/compiler/tf2xla/xla_compiler.cc:480:46: error: template argument 1 is invalid
   for (std::vector<XlaCompiler::VariableWrite>::size_type  i = 0;
                                              ^
tensorflow/compiler/tf2xla/xla_compiler.cc:480:46: error: template argument 2 is invalid
tensorflow/compiler/tf2xla/xla_compiler.cc:480:60: error: expected ';' before 'i'
   for (std::vector<XlaCompiler::VariableWrite>::size_type  i = 0;
                                                            ^
tensorflow/compiler/tf2xla/xla_compiler.cc:480:60: error: 'i' was not declared in this scope
tensorflow/compiler/tf2xla/xla_compiler.cc:481:43: error: expected ')' before ';' token
        i < result->variable_updates.size(); ++i) {
                                           ^
tensorflow/compiler/tf2xla/xla_compiler.cc:480:49: warning: unused variable 'size_type' [-Wunused-variable]
   for (std::vector<XlaCompiler::VariableWrite>::size_type  i = 0;
                                                 ^
tensorflow/compiler/tf2xla/xla_compiler.cc:481:47: error: 'i' was not declared in this scope
        i < result->variable_updates.size(); ++i) {
                                               ^
Target //tensorflow/tools/pip_package:build_pip_package failed to build
INFO: Elapsed time: 1162.629s, Critical Path: 913.22s